# dataset-creator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: dataset.jsonl  dataset.judged.jsonl  dataset.meta.json  dataset.rejected.jsonl  dataset_test.jsonl  dataset_train.jsonl  dataset_val.jsonl
pipeline/: generate_dataset.py  requirements.txt
pipeline/engine/: _cli.py  _config.py  _evidence.py  _export.py  _generation.py  _judge.py  _ollama.py  _pdf.py  _prompts.py  _quality.py  _text.py  _topics.py
rag/: generate_dataset.py  requirements.txt
tests/: conftest.py  test_generate_dataset.py
