[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-creator"
version = "0.2.0"
description = "Topic-aware synthetic QA dataset generator from PDFs using local Ollama models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nadiv" }]
dependencies = [
    "ollama>=0.4.0",
    "pymupdf4llm>=0.0.5",
    "pypdf>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5.0",
]

[project.scripts]
dataset-creator = "generate_dataset:main"

[tool.setuptools]
package-dir = { "" = "pipeline" }

[tool.setuptools.py-modules]
# Expose generate_dataset as a top-level module from pipeline/.
modules = ["generate_dataset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pipeline"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["pipeline/output", "pipeline/run_logs", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled softly
    "B008",  # argparse default=Path(...) is fine here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
